Refactor index.html with updated content and styles

--- a/index.html
+++ b/index.html
@@ -111,9 +111,17 @@ Tanggal Selesai:
 
 <select id="layananKiloan" onchange="updateSemua()">
 <option value="">-- Pilih Layanan --</option>
-<option value="7000|3">Cuci (3 Hari) - 7000/kg</option>
-<option value="9000|2">Cuci + Setrika (2 Hari) - 9000/kg</option>
-<option value="12000|1">Express (1 Hari) - 12000/kg</option>
+
+<option value="5000|2">Setrika (2 Hari) - 5.000/kg</option>
+<option value="10000|0">Cuci Lipat Express 6 Jam - 10.000/kg</option>
+<option value="8000|1">Cuci Lipat 1 Hari - 8.000/kg</option>
+
+<option value="7000|3">Cuci (3 Hari) - 7.000/kg</option>
+<option value="9000|2">Cuci + Setrika (2 Hari) - 9.000/kg</option>
+<option value="12000|1">Express (1 Hari) - 12.000/kg</option>
+
+</select>
+
 </select>
 
 Berat (kg):
@@ -262,3 +270,4 @@ updateSemua();
 
 </body>
 </html>
+
