Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ Tanggal Selesai:
 <option value="10000|0">Cuci Lipat Express 6 Jam - 10.000/kg</option>
 <option value="8000|1">Cuci Lipat 1 Hari - 8.000/kg</option>
 
-<option value="7000|3">Cuci (3 Hari) - 7.000/kg</option>
-<option value="9000|2">Cuci + Setrika (2 Hari) - 9.000/kg</option>
-<option value="12000|1">Express (1 Hari) - 12.000/kg</option>
+<option value="7000|3">Cuci + Setrika (3 Hari) - 7.000/kg</option>
+<option value="9000|2">Cuci + Setrika (1 Hari) - 10.000/kg</option>
+<option value="12000|1">Cuci + Setrika Express (Sameday) - 12.000/kg</option>
 
 </select>
 
@@ -270,4 +270,5 @@ updateSemua();
 
 </body>
 </html>
+
 
