--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>IDEALAUNDRY</title>
+<center style="font-size:11px;">
+Perum Cijujung Permai<br>
+Blok D No. 11 RT.02/07<br>
+No Telp: 085179578282
+</center>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
@@ -270,5 +276,6 @@ updateSemua();
 
 </body>
 </html>
+
 
 
