Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>IDEALAUNDRY</title>
-<center style="font-size:11px;">
-Perum Cijujung Permai<br>
-Blok D No. 11 RT.02/07<br>
-No Telp: 085179578282
+
 </center>
 
 
@@ -82,7 +79,12 @@ hr{
 <div id="nota">
 
 <h2>IDEALAUNDRY</h2>
-<center>HP: 085179578282</center>
+<center style="font-size:11px;">
+Perum Cijujung Permai<br>
+Blok D No. 11 RT.02/07<br>
+No Telp: 085179578282
+</center>
+
 <hr>
 
 <table>
@@ -276,6 +278,7 @@ updateSemua();
 
 </body>
 </html>
+
 
 
 
